--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </section>
 
   <!--/ Section Services Star /-->
-  <div id="about" class="section">
+  <<!--<div id="about" class="section">
     <div class="container">
       <div class="row">
 
@@ -177,7 +177,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   
   <!--/ Section Portfolio Star /-->
@@ -206,7 +206,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Life Satisfaction</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/happyinc.pdf" target="_blank">
                         Read More
@@ -235,7 +235,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title"></h2>
+                    <h2 class="w-title">Exchange Rate</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/IntlStu.pdf" target="_blank">
                         Read More
@@ -263,7 +263,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">Heart Stroke Prediction</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/Heart_Stroke-1.pdf" target="_blank">
                         Read More
@@ -291,7 +291,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Identifying_Cancer_in_miRNA</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/Identifying_Cancer_in_miRNA-2.pdf" target="_blank">
                         Read More
@@ -319,7 +319,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">Predicting Wine Quality</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/ML_Hw1.pdf" target="_blank">
                         Read More
@@ -347,7 +347,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">Classifying Fashion Prodcuts</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/ML_Hw2.pdf" target="_blank">
                         Read More
@@ -421,11 +421,12 @@
                 books as well as regular books. One of my favorite books is
                 <a href="https://www.amazon.com/Nudge-Improving-Decisions-Health-Happiness/dp/014311526X"
                 target="_blank" style="text-decoration:none;color:teal">
-                Nudge by Richard H. Thaler. </a> 
+                Nudge by Richard H. Thaler. </a> I also enjoy reading the classics
                 One of my all time favorite authors is <a href="https://www.amazon.com/s?k=charles+dickens&i=stripbooks&crid=2W5NZGON5ZPB1&sprefix=charles+di%2Cstripbooks%2C182&ref=nb_sb_ss_ts-doa-p_1_10"
-                target="_blank" style="text-decoration:none;color:teal"> Charles Dickens
-              </a>. I probably read too much of his work(my favorite being <a href="https://www.amazon.com/Expectations-Penguin-Classics-Charles-Dickens/dp/0141439564/ref=sr_1_4?crid=2W5NZGON5ZPB1&dchild=1&keywords=charles+dickens&qid=1628363987&s=books&sprefix=charles+di%2Cstripbooks%2C182&sr=1-4"
-              target="_blank" style="text-decoration:none;color:teal">Great Expectations</a>).
+                target="_blank" style="text-decoration:none;color:teal"> Charles Dickens.
+              </a> I probably read too much of his work(my favorite being <a href="https://www.amazon.com/Expectations-Penguin-Classics-Charles-Dickens/dp/0141439564/ref=sr_1_4?crid=2W5NZGON5ZPB1&dchild=1&keywords=charles+dickens&qid=1628363987&s=books&sprefix=charles+di%2Cstripbooks%2C182&sr=1-4"
+              target="_blank" style="text-decoration:none;color:teal">Great Expectations</a>). I'm currently reading <a href="https://www.amazon.com/Underground-Vintage-Classics-Fyodor-Dostoevsky/dp/067973452X/ref=asc_df_067973452X/?tag=hyprod-20&linkCode=df0&hvadid=353567357648&hvpos=&hvnetw=g&hvrand=4009611074691520600&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002004&hvtargid=pla-504424741087&psc=1&mcid=0d918e4187323e9d995ae12434e4619c&tag=&ref=&adgrpid=79744846988&hvpone=&hvptwo=&hvadid=353567357648&hvpos=&hvnetw=g&hvrand=4009611074691520600&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002004&hvtargid=pla-504424741087&gclid=CjwKCAiA5L2tBhBTEiwAdSxJX-RCitFLTH3PV-K2Fz5IwRyD_ne-1kk3rBW3I-g2b19nSDMNDOP1WxoCd7MQAvD_BwE"
+                target="_blank" style="text-decoration:none;color:teal">Notes from Underground</a> by Fyodor Dostoevsky. Happy to chat about those if you're interested!
               </p>
             </div>
           </div>
@@ -441,7 +442,7 @@
               <p>
                 I enjoy watching and playing soccer. 
                 My favorite football club is Barcelona Football Club. I'm always a big fan of Messi. I also enjoy pickup soccer once
-                a week with friends to test out my soccer skills. You can find me in Imacs Davidson College Saturday afternoons. 
+                a week with friends to test out my soccer skills. Besides Soccer, I occasionally enjoy a game of leauge if you consider esports as a sport. 
               </p>
             </div>
           </div>
@@ -472,9 +473,9 @@
                     
                
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 6852 Davidson College, Davidson, NC 28035</li>
-                      <li><span class="ion-ios-telephone"></span> (980) 636-9631</li>
-                      <li><span class="ion-email"></span> namulat@davidson.edu</li>
+                      <li><span class="ion-ios-location"></span> 36 Beacon St, Somerville, MA 02143</li>
+                      <li><span class="ion-ios-telephone"></span> (980)636-9631</li>
+                      <li><span class="ion-email"></span> namulat@mit.edu</li>
                     </ul>
                   </div>
                   <div class="socials">
