--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Identifying_Cancer_in_miRNA</h2>
+                    <h2 class="w-title">Identifying Cancer in miRNA</h2>
                     <div class="w-more">
                       <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/Identifying_Cancer_in_miRNA-2.pdf" target="_blank">
                         Read More
@@ -442,7 +442,7 @@
               <p>
                 I enjoy watching and playing soccer. 
                 My favorite football club is Barcelona Football Club. I'm always a big fan of Messi. I also enjoy pickup soccer once
-                a week with friends to test out my soccer skills. Besides Soccer, I occasionally enjoy a game of leauge if you consider esports as a sport. 
+                a week with friends to test out my soccer skills. Besides Soccer, I occasionally enjoy a game of League if you consider esports as a sport. 
               </p>
             </div>
           </div>
