--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Natnael Mulat</h1>
          
-          <p class="intro-subtitle"><span class="text-slider-items">Researcher, Data Engineer, Soccer Player, Computer Scientist, Prospective Economist</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Researcher, Problem Solver, Data Engineer, Soccer Player, Computer Scientist, Algorithm Explorer, Knowledge Seeker, Code Breaker, Lifelong Learner, Dynamic Thinker, Future Professor</span><strong class="text-slider"></strong></p>
           <p class="pt-3"><a class="btn btn-default smoothScroll wow fadeInUp" href="#about" role="button" data-wow-delay="1s">Learn More</a></p> 
           
         </div>
@@ -114,17 +114,13 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I'm a research fellow at Blueprint Labs working with Parag Pathak and his collaborators on various projects involving school choice and school closures. 
-                    Before joining the Lab, I graduated from Davidson College studying Economics and Computer Science. Summer of my junior year I was a Data Engineer intern at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a>. In additon, 
-                    I also worked with my advisor Dr.Mark Foley
-                    on the effects that delayed graduation may have on income and job satisfaction(COVID-inspired). In the past, I have written 
-                    several papers in Machine Learning and Economics. I'm a prospective economics graduate student looking for 
-                    pre-doc/fellow positions to expand my research experience.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism desing, matching, school choice, and school closures in large districts. 
+                    Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a> studying Economics, Computer Science, and Mathematics. Summer of my junior year I was a Data Engineer intern at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a> working on big data problems. In additon, 
+                    I was also supervised by my undergraduate advisor <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: teal">Dr.Mark Foley</a> to work on an independent research exploring 
+                    the effects that delayed graduation may have on income and job satisfaction (COVID-inspired). In the past, I have worked on several projects in Economics, Recommender Systems, Machine Learning, and Algorithm Design. You can contact me at namulat[at]mit[dot]edu.
                   </p>
                   <p class="lead">
-                    I believe in data lies the power to make our world simple and 
-                    solve problems that may otherwise seem impossible to tackle. Which is why I'm passionate about making data work. As you
-                    may have guessed I'm an avid Stata and Python user.
+                    I see data as a powerful tool to address systemic challenges and drive meaningful change. Whether it’s developing algorithms or exploring equitable solutions, I’m driven by the potential of data to bridge gaps and create opportunities. Tools like Matlab, Stata, and Python are my companions in this journey, turning complex problems into actionable insights.
                   </p>
                   <p class="lead">
                     Checkout my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: teal">Github Page</a> for previous works related to Machine Learning, Recommender Systems, and Econometrics ;)
