--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </div>
   <!--/ Intro End /-->
 
-  <!--/ About Section Start /-->
+  $1
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -110,8 +110,13 @@
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. 
-                    Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a> studying Economics, Computer Science, and Mathematics. Summer of my junior year I was a Data Engineer intern at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a> working on big data problems.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a>, studying Economics, Computer Science, and Mathematics. 
+                  </p>
+                  <p class="lead">
+                    During the summer of my junior year, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a>, where I worked on big data problems. In addition, I collaborated with my undergraduate advisor, <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: teal">Dr. Mark Foley</a>, to explore the effects that delayed graduation may have on income and job satisfaction (COVID-inspired). My academic journey has involved several projects in Economics, Recommender Systems, Machine Learning, and Algorithm Design.
+                  </p>
+                  <p class="lead">
+                    I see data as a powerful tool to address systemic challenges and drive meaningful change. Whether it’s developing algorithms or exploring equitable solutions, I’m driven by the potential of data to bridge gaps and create opportunities. Tools like Matlab, Stata, and Python are my companions in this journey, turning complex problems into actionable insights.
                   </p>
                   <p class="lead">
                     Checkout my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: teal">Github Page</a> for previous works related to Machine Learning, Recommender Systems, and Econometrics ;)
@@ -124,7 +129,82 @@
       </div>
     </div>
   </section>
-  <!--/ About Section End /-->
+$2
+
+  <!--/ Papers Section Start /-->
+  <section id="work" class="portfolio-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">Papers</h3>
+            <p class="subtitle-a">Some papers I have worked on in the past.</p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/1.png" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/1.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Life Satisfaction</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/happyinc.pdf" target="_blank">Read More</a> <span class="w-date">December 2020</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/2.png" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/2.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Exchange Rate</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/IntlStu.pdf" target="_blank">Read More</a> <span class="w-date">December 2019</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/3.png" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/3.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Heart Stroke Prediction</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory"></span> <a style="text-decoration:none;color:teal" href="files/Heart_Stroke-1.pdf" target="_blank">Read More</a> <span class="w-date">April 2021</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Papers Section End /-->
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
