--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="intro-title mb-4">Natnael Mulat</h1>
           <!-- Hacker-style typing effect -->
           <p class="intro-subtitle">
-            <span id="text-slider" class="typed-text"></span><span class="cursor">|</span>
+            <span id="text-slider" class="typed-text"></span><span class="cursor"></span>
           </p>
           <p class="pt-3">
             <a class="btn btn-default smoothScroll wow fadeInUp" href="#about" role="button" data-wow-delay="1s">Learn More</a>
