--- a/index.html
+++ b/index.html
@@ -323,6 +323,86 @@ $2
   </section>
   <!--/ Papers Section End /-->
 
+  <!--/ Section Testimonials Star /-->
+  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
+    <div class="overlay-mf"></div>
+    <div class="container">
+      
+      </div>
+    </div>
+  </div>
+
+  <!--/ Section Blog Star /-->
+  <div id="interests" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 wow bounce">
+          <h3 class="title-a">
+            (A few of) My other interests
+          </h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="media">
+            <div class="media-object media-left">
+              <i class="fa fa-music"></i>
+            </div>
+            <div class="media-body">
+              <h3 class="media-heading">Music</h3>
+              <p>
+                I enjoy listening to all types of music but I tend to mostly like instrumental tunes.
+                To give you an idea, here's one of my favorite Spotify playlists!
+              </p>
+              <iframe src="https://open.spotify.com/embed/playlist/6N2vE4LwwV4rH220bWjFwg" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="media">
+            <div class="media-object media-left">
+              <i class="fa fa-book"></i>
+            </div>
+            <div class="media-body">
+              <h3 class="media-heading">Reading</h3>
+              <p>
+                I also enjoy reading behaviorial economics related
+                books as well as regular books. One of my favorite books is
+                <a href="https://www.amazon.com/Nudge-Improving-Decisions-Health-Happiness/dp/014311526X"
+                target="_blank" style="text-decoration:none;color:teal">
+                Nudge by Richard H. Thaler. </a> I also enjoy reading the classics
+                One of my all time favorite authors is <a href="https://www.amazon.com/s?k=charles+dickens&i=stripbooks&crid=2W5NZGON5ZPB1&sprefix=charles+di%2Cstripbooks%2C182&ref=nb_sb_ss_ts-doa-p_1_10"
+                target="_blank" style="text-decoration:none;color:teal"> Charles Dickens.
+              </a> I probably read too much of his work(my favorite being <a href="https://www.amazon.com/Expectations-Penguin-Classics-Charles-Dickens/dp/0141439564/ref=sr_1_4?crid=2W5NZGON5ZPB1&dchild=1&keywords=charles+dickens&qid=1628363987&s=books&sprefix=charles+di%2Cstripbooks%2C182&sr=1-4"
+              target="_blank" style="text-decoration:none;color:teal">Great Expectations</a>). I'm currently reading <a href="https://www.amazon.com/Underground-Vintage-Classics-Fyodor-Dostoevsky/dp/067973452X/ref=asc_df_067973452X/?tag=hyprod-20&linkCode=df0&hvadid=353567357648&hvpos=&hvnetw=g&hvrand=4009611074691520600&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002004&hvtargid=pla-504424741087&psc=1&mcid=0d918e4187323e9d995ae12434e4619c&tag=&ref=&adgrpid=79744846988&hvpone=&hvptwo=&hvadid=353567357648&hvpos=&hvnetw=g&hvrand=4009611074691520600&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9002004&hvtargid=pla-504424741087&gclid=CjwKCAiA5L2tBhBTEiwAdSxJX-RCitFLTH3PV-K2Fz5IwRyD_ne-1kk3rBW3I-g2b19nSDMNDOP1WxoCd7MQAvD_BwE"
+                target="_blank" style="text-decoration:none;color:teal">Notes from Underground</a> by Fyodor Dostoevsky. Happy to chat about those if you're interested!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="media">
+            <div class="media-object media-left">
+              <i class="fa fa-soccer-ball-o"></i>
+            </div>
+            <div class="media-body">
+              <h3 class="media-heading">Sports</h3>
+              <p>
+                I enjoy watching and playing soccer. 
+                My favorite football club is Barcelona Football Club. I'm always a big fan of Messi. I also enjoy pickup soccer once
+                a week with friends to test out my soccer skills. Besides Soccer, I occasionally enjoy a game of League if you consider esports as a sport. 
+              </p>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+  <!--/ Section Blog End /-->
+
+
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
