--- a/index.html
+++ b/index.html
@@ -79,21 +79,23 @@
   </div>
   <!--/ Intro End /-->
 
-
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
-                <div class="row">
-                  <div class="col-sm-6 col-md-5">
+              <!-- Profile Image and Info in a single column -->
+              <div class="col-12">
+                <div class="row align-items-start">
+                  <!-- Image -->
+                  <div class="col-md-4">
                     <div class="about-img">
                       <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-7">
+                  <!-- Info -->
+                  <div class="col-md-8">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Natnael Mulat</span></p>
                       <p><span class="title-s">Profile: </span> <span>Research Fellow</span></p>
@@ -104,19 +106,21 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="about-me pt-4 pt-md-0">
+              
+              <!-- About Me Text Section -->
+              <div class="col-12 mt-4">
+                <div class="about-me">
                   <div class="title-box-2">
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a>, studying Economics, Computer Science, and Mathematics. 
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a>, studying Economics, Computer Science, and Mathematics.
                   </p>
                   <p class="lead">
                     During the summer of my junior year, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a>, where I worked on big data problems. In addition, I collaborated with my undergraduate advisor, <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: teal">Dr. Mark Foley</a>, to explore the effects that delayed graduation may have on income and job satisfaction (COVID-inspired). My academic journey has involved several projects in Economics, Recommender Systems, Machine Learning, and Algorithm Design.
                   </p>
                   <p class="lead">
-                    I see data as a powerful tool to address systemic challenges and drive meaningful change. Whether it’s developing algorithms or exploring equitable solutions, I’m driven by the potential of data to bridge gaps and create opportunities. Tools like Matlab, Stata, and Python are my companions in this journey, turning complex problems into actionable insights.
+                    I see data as a powerful tool to address systemic challenges and drive meaningful change. Whether it's developing algorithms or exploring equitable solutions, I'm driven by the potential of data to bridge gaps and create opportunities. Tools like Matlab, Stata, and Python are my companions in this journey, turning complex problems into actionable insights.
                   </p>
                   <p class="lead">
                     Checkout my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: teal">Github Page</a> for previous works related to Machine Learning, Recommender Systems, and Econometrics ;)
@@ -129,8 +133,7 @@
       </div>
     </div>
   </section>
-
-
+  
   <!--/ Papers Section Start /-->
   <section id="papers" class="portfolio-mf sect-pt4 route">
     <div class="container">
