--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining the MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a>, studying Economics, Computer Science, and Mathematics.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: teal">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: teal">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: teal">Davidson College</a>, studying Economics, Computer Science, and Mathematics.
                   </p>
                   <p class="lead">
                     During the summer of my junior year, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: teal">Tresata</a>, where I worked on big data problems. In addition, I collaborated with my undergraduate advisor, <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: teal">Dr. Mark Foley</a>, to explore the effects that delayed graduation may have on income and job satisfaction (COVID-inspired). My academic journey has involved several projects in Economics, Recommender Systems, Machine Learning, and Algorithm Design.
@@ -133,7 +133,7 @@
       </div>
     </div>
   </section>
-  
+
   <!--/ Papers Section Start /-->
   <section id="papers" class="portfolio-mf sect-pt4 route">
     <div class="container">
