--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
               <div class="col-12">
                 <div class="row align-items-start">
                   <!-- Image -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <div class="about-img">
-                      <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="" style="width: 400px; height: auto;">
                     </div>
                   </div>
                   <!-- Info -->
