--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         textSlider.textContent += textItems[index].charAt(charIndex);
         charIndex++;
         textSlider.style.fontFamily = "'Courier New', Courier, monospace";
-        textSlider.style.color = "#00ff00";
+        textSlider.style.color = "#0078ff";
         setTimeout(type, typingSpeed);
       } else {
         setTimeout(erase, delayBetweenItems);
