--- a/index.html
+++ b/index.html
@@ -78,33 +78,21 @@
     </div>
   </div>
   <!--/ Intro End /-->
-
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <!-- Profile Image and Info in a single column -->
-              <div class="col-12">
-                <div class="row align-items-start">
-                  <!-- Image -->
-                  <div class="col-md-4">
-                    <div class="about-img">
-                      <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="" style="width: 400px; height: auto;">
-                    </div>
-                  </div>
-                  <!-- Info -->
-                  <div class="col-md-8">
-                    <div class="about-info">
-                      
-                    </div>
-                  </div>
+              <!-- Image on the left -->
+              <div class="col-md-4">
+                <div class="about-img">
+                  <img src="img/profile.jpg" class="img-fluid rounded b-shadow-a" alt="" style="width: 400px; height: auto;">
                 </div>
               </div>
               
-              <!-- About Me Text Section -->
-              <div class="col-12 mt-4">
+              <!-- About Me Text Section on the right -->
+              <div class="col-md-8">
                 <div class="about-me">
                   <div class="title-box-2">
                     <h5 class="title-left">About Me</h5>
