--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a> and his collaborators on various projects involving mechanism design, matching, school choice, and school closures in large districts. Before joining MIT, I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: #0078ff">Davidson College</a>, studying Economics, Computer Science, and Mathematics.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a>, focusing on the design and implementation of equitable assignment mechanisms in education. My research interests lie at the intersection of market design and social impact, particularly studying how mechanism design and matching algorithms can improve efficiency and equity in school choice systems.
                   </p>
                   <p class="lead">
-                    During the summer of my junior year, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: #0078ff">Tresata</a>, where I worked on big data problems. In addition, I collaborated with my undergraduate advisor, <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: #0078ff">Dr. Mark Foley</a>, to explore the effects that delayed graduation may have on income and job satisfaction (COVID-inspired). My academic journey has involved several projects in Economics, Recommender Systems, Machine Learning, and Algorithm Design.
-                  </p>
+                    My research interests lie at the intersection of Economics and Computer Science, exploring how data and algorithms can be used to address systemic challenges in education and market design. I use tools from Economics, Machine Learning, and Algorithm Design to develop solutions that bridge theoretical insights with practical applications.
+                  </p>                  
                   <p class="lead">
-                    I see data as a powerful tool to address systemic challenges and drive meaningful change. Whether it's developing algorithms or exploring equitable solutions, I'm driven by the potential of data to bridge gaps and create opportunities. Tools like Matlab, Stata, and Python are my companions in this journey, turning complex problems into actionable insights.
-                  </p>
+                    Previously, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: #0078ff">Tresata</a>, where I worked on large-scale data analysis problems. I also conducted research with <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: #0078ff">Dr. Mark Foley</a> on the economic impacts of delayed graduation, a project inspired by COVID-19's effects on educational outcomes. I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: #0078ff">Davidson College</a> with a background in Economics, Computer Science, and Mathematics.
+                  </p>    
                   <p class="lead">
-                    Checkout my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: #0078ff">Github Page</a> for previous works related to Machine Learning, Recommender Systems, and Econometrics ;)
+                    You can explore my previous work in Machine Learning, Recommender Systems, and Econometrics on my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: #0078ff">Github Page</a>.
                   </p>
                 </div>
               </div>
