--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
                     <h5 class="title-left">About Me</h5>
                   </div>
                   <p class="lead">
-                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a>, focusing on the design and implementation of equitable assignment mechanisms in education. My research interests lie at the intersection of market design and social impact, particularly studying how mechanism design and matching algorithms can improve efficiency and equity in school choice systems.
+                    I'm a senior research fellow at <a href="https://blueprintlabs.mit.edu/" target="_blank" style="color: #0078ff">Blueprint Labs</a> working with <a href="https://economics.mit.edu/people/faculty/parag-pathak" target="_blank" style="color: #0078ff">Parag Pathak</a>, focusing on the design and implementation of equitable assignment mechanisms in education. My research interests lie at the intersection of market design and social impact, where I use tools from Economics, Machine Learning, and Algorithm Design to address systemic challenges in education and develop solutions that bridge theoretical insights with practical applications.
                   </p>
-                  <p class="lead">
-                    My research interests lie at the intersection of Economics and Computer Science, exploring how data and algorithms can be used to address systemic challenges in education and market design. I use tools from Economics, Machine Learning, and Algorithm Design to develop solutions that bridge theoretical insights with practical applications.
-                  </p>                  
+                  
                   <p class="lead">
                     Previously, I interned as a Data Engineer at <a href="https://tresata.com" target="_blank" style="color: #0078ff">Tresata</a>, where I worked on large-scale data analysis problems. I also conducted research with <a href="https://www.davidson.edu/people/mark-foley" target="_blank" style="color: #0078ff">Dr. Mark Foley</a> on the economic impacts of delayed graduation, a project inspired by COVID-19's effects on educational outcomes. I graduated from <a href="https://www.davidson.edu/" target="_blank" style="color: #0078ff">Davidson College</a> with a background in Economics, Computer Science, and Mathematics.
-                  </p>    
+                  </p>
+                  
                   <p class="lead">
                     You can explore my previous work in Machine Learning, Recommender Systems, and Econometrics on my <a href="https://github.com/Natnael-Mulat" target="_blank" style="color: #0078ff">Github Page</a>.
                   </p>
