--- a/index.html
+++ b/index.html
@@ -303,6 +303,35 @@
               </a>
             </div>
           </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="img/7.png" data-lightbox="gallery-mf">
+                <div class="work-img">
+                  <img src="img/6.png" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Recommender Systems</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory"></span> <a style="text-decoration:none;color:#0078ff" href="" target="_blank">
+                          Read More
+                         </a> <span class="w-date">March 2021</span>
+                        
+                      
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
   
         </div>
       </div>
